Added route to get user by id
