# docs/swagger.json
@@ -58,6 +58,23 @@
                 }
             }
         },
+        "/auth/users/:id": {
+            "get": {
+                "description": "Returns a user object",
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get a User by ID",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SelfUser"
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "description": "get the database health",
