# internal/server/user_handler.go
@@ -1,10 +1,12 @@
 package server
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/ZondaF12/logbook-backend/internal/models"
 	"github.com/golang-jwt/jwt/v5"
+	"github.com/google/uuid"
 	"github.com/labstack/echo/v4"
 )
 
@@ -21,14 +23,14 @@ func (s *Server) GetSelfHandler(c echo.Context) error {
 
 	res := s.db.GetUserByID(claims.ID)
 
-	session := models.SelfUser{
+	self := models.SelfUser{
 		ID:    res.ID,
 		Email: res.Email,
 		Name:  res.Name,
 		Role:  res.Role,
 	}
 
-	return c.JSON(http.StatusOK, session)
+	return c.JSON(http.StatusOK, self)
 }
 
 // Users godoc
@@ -50,4 +52,31 @@ func (s *Server) GetUsersHandler(c echo.Context) error {
 
 	users := s.db.GetUsers()
 	return c.JSON(http.StatusOK, users)
+}
+
+// Users godoc
+//
+//	@Summary		Get a User by ID
+//	@Description	Returns a user object
+//	@Tags			user
+//	@Success		200 {object} models.SelfUser
+//	@Router			/auth/users/:id [get]
+func (s *Server) GetUserByIDHandler(c echo.Context) error {
+	id := c.Param("id")
+	uuid, err := uuid.Parse(id)
+	if err != nil {
+		fmt.Println(err)
+		return err
+	}
+
+	res := s.db.GetUserByID(uuid)
+
+	user := models.SelfUser{
+		ID:    res.ID,
+		Email: res.Email,
+		Name:  res.Name,
+		Role:  res.Role,
+	}
+
+	return c.JSON(http.StatusOK, user)
 }
